# ai-usage-dashboard

./: .env.example  ENDPOINTS.md  FRONTEND_HANDOFF.md  README.md  SPEC.md  TODO.md  compose.yaml  openapi.json  openapi.yaml  playground.md  pyproject.toml
.github/workflows/: ci.yml
api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
api/src/ai_usage_dashboard/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
api/src/ai_usage_dashboard/routers/: models_router.py  projects.py  usage.py
api/tests/: conftest.py  test_models.py  test_projects.py  test_usage.py
app/: config.py  db.py  main.py  models.py  scheduler.py
app/providers/: anthropic.py  base.py  gemini.py  mistral.py  openai.py  openrouter.py  tool_usage.py
app/services/: collector.py  metrics.py  smoke_tests.py  subscriptions.py
app/static/css/: dashboard.css
app/static/js/: dashboard.js
app/templates/: dashboard.html
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: CostBarChart.tsx  TokenPieChart.tsx  UsageLineChart.tsx
frontend/src/components/dashboard/: ChartCard.tsx  FilterPanel.tsx  StatCard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx
frontend/src/hooks/: useModels.ts  useProjects.ts  useUsage.ts  useUsageSummary.ts
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx
tests/: test_metrics.py  test_provider_filtering.py  test_smoke_tests.py  test_subscriptions.py  test_tool_usage.py  test_windows.py
