[project]
name = "ai-usage-dashboard"
version = "0.1.0"
description = "AI API usage dashboard — tracks spend and usage across OpenAI, Anthropic, Gemini, Mistral, and OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "rich>=13.7.0",
]

[project.scripts]
ai-dashboard = "app.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
